<resources>
    <!-- main -->
    <string name="app_name">RulerNotepad</string>

    <!-- menu -->
    <string name="action_settings">Ustawienia</string>
    <string name="action_wipe">Wyczyść dane</string>
    <string name="action_about">O aplikacji</string>

    <!-- preferences -->
    <string name="pref_language">Language</string>
    <string name="pref_language_summary">Application language.</string>
    <string name="pref_language_default">English</string>
    <string-array name="pref_language_values">
        <item>English</item>
        <item>Polski</item>
    </string-array>

    <string name="pref_email">Email address</string>
    <string name="pref_email_summary">Address for sending measurements reports.</string>
    <string name="pref_email_default">nawbar23@gmail.com</string>

    <!-- preferences -->
    <string name="action_about_description">Designed and implemented by\nBartosz Nawrot\nnawbar23@gmail.com\n\nSource code is opened and public at\nhttps://github.com/nawbar23/RulerNotepad</string>

    <string-array name="Planets">
        <item>Sun</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>